# forecast-bot.back

./: .gitignore  README.md  main.py  pyproject.toml  sender.py  worker.py
docker/: Dockerfile  docker-compose.yaml
src/domain/core/: constants.py  settings.py
src/domain/core/bot/: handler.py
src/domain/core/database/: handler.py
src/domain/core/rabbit/: handler.py
src/domain/entities/: external.py  repositiries.py
src/infrastructure/orm/forecasts/: executer.py
src/infrastructure/orm/users/: executer.py
src/interface/controllers/forecasts/: controller.py
src/interface/controllers/sender/: controller.py
src/interface/controllers/targets/: controller.py
src/interface/controllers/users/: controller.py
