[tool.poetry]
name = "betify-bot-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "betify_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.8.0"
aio-pika = "^9.4.2"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
